POI endpoint partial
